<resources>
    <string name="app_name">SwapChat</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Maps</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_my_profile">MyProfile</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_dog_list">Items</string>
    <string name="title_dog_detail">Item Detail</string>
    <string name="title_asd_list">Items</string>
    <string name="title_asd_detail">asd Detail</string>
    <string name="title_activity_add_dog">Item Details</string>

    <string-array name="spinner_gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="spinner_age">
        <item>Year(s)</item>
        <item>Month(s)</item>
    </string-array>
    <string-array name="spinner_language">
        <item>English</item>
        <item>Tagalog</item>
    </string-array>
    <string-array name="spinner_age_number">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string name="title_activity_notifications">Notifications</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_maps">Map</string>
    <string name="photo_request_format" translatable="false">https://maps.googleapis.com/maps/api/place/photo?maxwidth=%1$d&amp;photoreference=%2$s&amp;key=%3$s</string>


    <string name="facebook_app_id" translatable="false">351901931986139</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb351901931986139</string>


    <!-- Verification activity -->
    <string name="verify">Verify</string>
    <string name="face_0">Face0:</string>
    <string name="face_1">Face1:</string>
    <string name="manage_persons">Manage\nPersons</string>
    <string name="verification_menu">Verification\nMenu</string>

    <!-- Common in all activities -->
    <string name="progress_dialog_title">Please wait</string>
    <string name="view_log">View Log</string>

    <!-- Detection activity -->
    <string name="image">Image:</string>
    <string name="select_image">Select\nImage</string>
    <string name="result">Result:</string>
    <string name="detect">Detect</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="forgot_password">forgot password?</string>
    <string name="log_in">LOG IN</string>
    <string name="registration">REGISTRATION</string>
    <string name="add_item">Add Item</string>
    <string name="full_name">Full Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="save">save</string>
    <string name="profile_amp_items"><![CDATA[Profile & Items]]></string>
    <string name="trade_matches">Trade Matches</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="distance">Distance</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="account_create">CREATE</string>
    <string name="disclaimer">We are not responsible for any items traded in this service.</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="login_failed">Login Failed. Invalid credentials. You have</string>
    <string name="login_attempts_left"> attempts left</string>
    <string name="reset_password_email_sent">Reset Password Email Sent</string>
    <string name="profile_saved">Profile Saved!</string>
    <string name="dashboard_log_out">Are you sure you want to log out?</string>
    <string name="no_network_connection">No network connection</string>
    <string name="enter_comment">Enter comment for this item:</string>
    <string name="feedback">Feedback</string>
    <string name="please_select_an_item_to_comment_on">Please select an item to comment on</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="view_item_details">View Item Details</string>
    <string name="city">City</string>
    <string name="item_added">Item Added</string>
    <string name="you_liked">You liked</string>
    <string name="liked_yours">Likes your items</string>
    <string name="matched">Matched</string>
    <string name="swipe_tutorial">Swipe left to skip, Swipe right to like</string>
    <string name="fullname">Fullname</string>
    <string name="login_fb">Login with facebook</string>
    <string name="profanity">Using profanity is not allowed</string>
    <string name="type_email">Type in the email field</string>
    <string name="last_login">last login:</string>
    <string name="face">face</string>
    <string name="item">Item</string>
    <string name="tell_more_about_your_item">Tell more about your item</string>
    <string name="add_an_image_for_item">Please add an image for this item</string>
    <string name="type_a_message">Type a message</string>
    <string name="detected">detected</string>
</resources>
