<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/material_baseline_grid_1x"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="xyz.teamcatalyst.breedr.profile.ItemDetailsActivity"
        tools:showIn="@layout/activity_add_item">

        <ImageView
            android:id="@+id/iv_item_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/material_color_blue_grey_200"
            android:foreground="?selectableItemBackgroundBorderless"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_photo_camera_black_24dp"/>

        <Button
            android:id="@+id/btn_item_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:visibility="visible"
            android:text="Delete"
            android:visibility="gone"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_item_image_list"
                android:layout_marginTop="@dimen/material_baseline_grid_1x"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="100dp"/>

            <ImageButton
                android:id="@+id/add_image"
                app:srcCompat="@drawable/ic_add_box_black_24dp"
                android:background="#00000000"
                android:scaleType="centerCrop"
                android:layout_gravity="center_vertical"
                android:layout_width="48dp"
                android:layout_height="48dp"/>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_user_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/item"
            app:hintAnimationEnabled="true"
            app:hintTextAppearance="@style/TextAppearance.Design.Hint">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileFullName">
            </android.support.design.widget.TextInputEditText>

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/et_item_category"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:foreground="@drawable/rect_trans_with_border"
            android:hint="Breed"/>

        <Spinner
            android:id="@+id/et_item_gender"
          android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="@dimen/material_baseline_grid_1x"
            android:foreground="@drawable/rect_trans_with_border"
            android:hint="Gender"/>

        <LinearLayout
            android:layout_width="match_parent"
          android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_baseline_grid_1x"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/material_baseline_grid_1x"
                android:layout_weight="1"
                android:hint="Age"
                app:hintAnimationEnabled="true"
                app:hintTextAppearance="@style/TextAppearance.Design.Hint">

                <EditText
                    android:id="@+id/et_item_age"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/et_item_age_year"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:foreground="@drawable/rect_trans_with_border"
                android:hint="Year/Month"/>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            app:hintAnimationEnabled="true"
            app:hintTextAppearance="@style/TextAppearance.Design.Hint">

            <EditText
                android:id="@+id/et_item_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tell_more_about_your_item"
            app:hintAnimationEnabled="true"
            app:hintTextAppearance="@style/TextAppearance.Design.Hint">

            <EditText
                android:id="@+id/et_item_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"/>
        </android.support.design.widget.TextInputLayout>

        <Switch
            android:id="@+id/sw_is_vaccinated"
          android:visibility="gone"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/material_baseline_grid_0.5x"
            android:layout_marginTop="@dimen/material_baseline_grid_1x"
            android:text="Is Vaccinated"/>

        <LinearLayout
            android:id="@+id/vaccinations"
          android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_baseline_grid_1x"
                android:text="1 - 2 months"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alignmentMode="alignBounds"
                android:columnCount="2">

                <CheckBox
                    android:id="@+id/cb_distemper"
                    android:layout_columnSpan="1"
                    android:tag="Distemper"
                    android:text="Distemper"/>

                <CheckBox
                    android:id="@+id/cb_measles"
                    android:layout_columnSpan="1"
                    android:tag="Measles"
                    android:text="Measles"/>

                <CheckBox
                    android:id="@+id/cb_parainfluenza"
                    android:layout_columnSpan="1"
                    android:tag="Parainfluenza"
                    android:text="Parainfluenza"/>

                <CheckBox
                    android:id="@+id/cb_bordetella"
                    android:layout_columnSpan="1"
                    android:tag="Bordetella"
                    android:text="Bordetella"/>
            </GridLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_baseline_grid_1x"
                android:text="3 months"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alignmentMode="alignBounds"
                android:columnCount="2">

                <CheckBox
                    android:id="@+id/cb_dhpp"
                    android:layout_columnSpan="1"
                    android:tag="DHPP"
                    android:text="DHPP"/>

                <CheckBox
                    android:id="@+id/cb_corona"
                    android:layout_columnSpan="1"
                    android:tag="Coronavirus"
                    android:text="Coronavirus"/>

                <CheckBox
                    android:id="@+id/cb_lyme"
                    android:layout_columnSpan="1"
                    android:tag="Lyme Disease"
                    android:text="Lyme Disease"/>
            </GridLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_baseline_grid_1x"
                android:text="1 - 2 years"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/material_baseline_grid_1x"
                android:alignmentMode="alignBounds"
                android:columnCount="2">

                <CheckBox
                    android:id="@+id/cb_rabies"
                    android:layout_columnSpan="1"
                    android:tag="Rabies"
                    android:text="Rabies"/>
            </GridLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageButton
                    android:id="@+id/add_vaccine_proof_image"
                    app:srcCompat="@drawable/ic_add_box_black_24dp"
                    android:background="#00000000"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center_vertical"
                    android:layout_width="48dp"
                    android:layout_height="48dp"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_vaccination_proof_list"
                    android:layout_marginTop="@dimen/material_baseline_grid_1x"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="100dp"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>

